# datastore-generic-uploader

./: .cookiecutterrc  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyBIS Uploader.ipynb  pyproject.toml  tox.ini
.github/workflows/: build.yml  coverage.yml  docs.yml  release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/reference/: index.rst
notebooks/: pyBIS Uploader.ipynb
src/datastore_generic_uploader/: __init__.py  __main__.py  gui.py
src/datastore_generic_uploader/Parser/: TEMParser.py
tests/: requirements.txt  test_datastore_generic_uploader.py
